src/assets/scss/pages/successful-resumes/resume-page.scss
.successful-resume {
	.successful-resume-name {
		min-height: 42px;
		color: #333333;
		font-family: "Geometria Light";
		font-size: 42px;
		font-weight: 300;
		line-height: 53px;
	}

    &.featured-resume {
        .successful-resume-cta {
            margin-top: $spacer * 6;
        }
    }

	.successful-resume-tag-container {
		margin-top: $spacer*3;
		margin-left: -$spacer/2;
	}

	.successful-resume-works-at img {
		margin-left: -$spacer/2;
	}

	.similar-resumes {
		color: #808080;
		font-size: 14px;
		line-height: 16px;
	}

	.successful-resume-cta {
		max-width: 536px;
		margin-top: 96px;
        margin-left: auto;
        margin-right: auto;

        .cta-text {
            color: #808080;
        }

        form {
            margin: auto;
            max-width: 422px;
        }
	}

	@media screen and (max-width: $screen-xs-max) {
		.successful-resume-name,
		.successful-resume-tag-container,
		.successful-resume-works-at {
			text-align: center;
		}

		.successful-resume-name {
			margin-top: $spacer * 2;
		}

		.successful-resume-cta {
			margin-top: $spacer * 2;
		}
	}
}

.successful-resumes-carousel-align {
	display: flex;
	justify-content: center;
}

.back-button {
	i {
		font-size: 25px;
	}

	span {
		position: relative;
		top: -6px;
	}
}

.successful-resume-image-container {
	position: relative;

	.back-image {
		position: absolute;
		z-index: -1;
		transform: rotate(5deg);
	}

	.front-image-container {
		display: inline-block;
		position: relative;

		.show-button {
			position: absolute;
			bottom: 16px;
			right: 16px;
			border-radius: 5px;
			padding: $spacer $spacer*3/2;
			background: #363636;
			color: #fff;
		}
	}

	img {
		max-width: 400px;
		width: 100%;
		box-shadow: 0 3px 75px 0 rgba(0, 0, 0, 0.125);
	}
}

.successful-resumes-share {
    border: 1px solid $border-color;
    padding: $spacer * 2;
    border-radius: 5px;
    max-width: 368px;

	.btn {
        width: 40px;
        height: 40px;
		padding: $spacer/2 $spacer*2;
		margin: 0 0 0 $spacer;
        display: flex;
        align-items: center;
        justify-content: center;

        &:first-child {
            margin: 0;
        }
	}

	i {
        &:before {
            font-size: 21px;
        }
	}

	&.move-top {
		margin-top: $spacer*7;
	}

    @media (max-width: $screen-xs-max) {
        border: none;
        padding: 0;

        &.move-top {
            margin-top: $spacer*4;
        }
    }
}

.successful-resumes-share-condensed {
    .btn {
        padding: $spacer/2 $spacer*2;
        margin: 0 $spacer/2;
    }

    i {
        margin-left: $spacer;
        position: relative;
        top: -1px;
    }

    &.move-top {
        margin-top: $spacer*9;
    }
}

